# inspect-refusal-sample-killer

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/superpowers/plans/: 2026-07-14-inspect-refusal-sample-killer.md
docs/superpowers/specs/: 2026-07-14-classifier-refusal-limit-hook-design.md
src/inspect_refusal_sample_killer/: __init__.py  _config.py  _detection.py  _hooks.py  _registry.py  _tasks.py
tests/: conftest.py  test_before_generate.py  test_config.py  test_detection.py  test_hooks.py  test_integration.py  test_smoke.py
