[project]
name = "inspect-refusal-sample-killer"
version = "0.1.0"
description = "Inspect AI hook that terminates a sample when classifier refusals exceed a limit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3.246",
]

[project.entry-points.inspect_ai]
inspect_refusal_sample_killer = "inspect_refusal_sample_killer._registry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_refusal_sample_killer"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "basedpyright>=1.21",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "integration: live tests that hit a real model API (deselected by default)",
]
addopts = "-m 'not integration'"

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.basedpyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
